<!-- res/layout/activity_profile.xml -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_custom"
        />
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="240dp"
        android:layout_height="217dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/dream_journal_icon"
        android:scaleType="fitCenter"
        android:layout_marginTop="24dp"/>


    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileImageView"
        android:hint="@string/first_name"
        android:textSize="22sp"
        android:layout_marginTop="32dp"/>

    <EditText
        android:id="@+id/lastNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/firstNameEditText"
        android:hint="@string/last_name"
        android:textSize="22sp"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/phoneNumberEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lastNameEditText"
        android:hint="@string/phone_number"
        android:textSize="22sp"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneNumberEditText"
        android:hint="@string/user_name"
        android:textSize="22sp"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/updateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameEditText"
        android:text="@string/update"
        android:textSize="21sp"
        android:background="@android:color/holo_orange_light"
        android:textColor="@android:color/white"
        android:layout_marginTop="24dp"/>

    <Button
        android:id="@+id/addJournalEntryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/updateButton"
        android:text="@string/add_new_journal_entry"
        android:textSize="21sp"
        android:background="@android:color/holo_orange_light"
        android:textColor="@android:color/white"
        android:layout_marginTop="24dp"/>

</RelativeLayout>
</LinearLayout>